syntax = "proto3";
package axelar.axelarnet.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/axelarnet/types";

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "axelar/axelarnet/v1beta1/tx.proto";
import "axelar/axelarnet/v1beta1/query.proto";

option (gogoproto.goproto_registration) = true;

// Msg defines the axelarnet Msg service.
service MsgService {
  rpc Link(LinkRequest) returns (LinkResponse) {
    option (google.api.http) = {
      post : "/axelar/axelarnet/link"
      body : "*"
    };
  }

  rpc ConfirmDeposit(ConfirmDepositRequest) returns (ConfirmDepositResponse) {
    option (google.api.http) = {
      post : "/axelar/axelarnet/confirm_deposit"
      body : "*"
    };
  }

  rpc ExecutePendingTransfers(ExecutePendingTransfersRequest)
      returns (ExecutePendingTransfersResponse) {
    option (google.api.http) = {
      post : "/axelar/axelarnet/execute_pending_transfers"
      body : "*"
    };
  }

  rpc RegisterIBCPath(RegisterIBCPathRequest)
      returns (RegisterIBCPathResponse) {
    option (google.api.http) = {
      post : "/axelar/axelarnet/register_ibc_path"
      body : "*"
    };
  }

  rpc AddCosmosBasedChain(AddCosmosBasedChainRequest)
      returns (AddCosmosBasedChainResponse) {
    option (google.api.http) = {
      post : "/axelar/axelarnet/add_cosmos_based_chain"
      body : "*"
    };
  }

  rpc RegisterAsset(RegisterAssetRequest) returns (RegisterAssetResponse) {
    option (google.api.http) = {
      post : "/axelar/axelarnet/register_asset"
      body : "*"
    };
  }

  rpc RouteIBCTransfers(RouteIBCTransfersRequest)
      returns (RouteIBCTransfersResponse) {
    option (google.api.http) = {
      post : "/axelar/axelarnet/route_ibc_transfers"
      body : "*"
    };
  }

  rpc RegisterFeeCollector(RegisterFeeCollectorRequest)
      returns (RegisterFeeCollectorResponse) {
    option (google.api.http) = {
      post : "/axelar/axelarnet/register_fee_collector"
      body : "*"
    };
  }

  rpc RetryIBCTransfer(RetryIBCTransferRequest)
      returns (RetryIBCTransferResponse) {
    option (google.api.http) = {
      post : "/axelar/axelarnet/retry_ibc_transfer"
      body : "*"
    };
  }
}

// QueryService defines the gRPC querier service.
service QueryService {

  // PendingIBCTransferCount queries the pending ibc transfers for all chains
  rpc PendingIBCTransferCount(PendingIBCTransferCountRequest)
      returns (PendingIBCTransferCountResponse) {
    option (google.api.http).get =
        "/axelar/axelarnet/v1beta1/ibc_transfer_count";
  }
}
