syntax = "proto3";
package axelar.axelarnet.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/axelarnet/types";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "axelar/nexus/exported/v1beta1/types.proto";
import "axelar/axelarnet/v1beta1/types.proto";
import "axelar/permission/exported/v1beta1/types.proto";

option (gogoproto.goproto_getters_all) = false;

// MsgLink represents a message to link a cross-chain address to an Axelar
// address
message LinkRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string recipient_addr = 2;
  string recipient_chain = 3
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
  string asset = 4;
}

message LinkResponse { string deposit_addr = 1; };

// MsgConfirmDeposit represents a deposit confirmation message
message ConfirmDepositRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];

  reserved 2; // tx_id was removed in v0.14

  reserved 3; // token was removed in v0.15

  bytes deposit_address = 4
      [ (gogoproto.casttype) =
            "github.com/cosmos/cosmos-sdk/types.AccAddress" ];

  string denom = 5;
}

message ConfirmDepositResponse {}

// MsgExecutePendingTransfers represents a message to trigger transfer all
// pending transfers
message ExecutePendingTransfersRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
}

message ExecutePendingTransfersResponse {}

// MSgRegisterIBCPath represents a message to register an IBC tracing path for
// a cosmos chain
message RegisterIBCPathRequest {
  option deprecated = true;

  option (permission.exported.v1beta1.permission_role) = ROLE_CHAIN_MANAGEMENT;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string chain = 2
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
  string path = 3;
}

message RegisterIBCPathResponse {}

// MsgAddCosmosBasedChain represents a message to register a cosmos based chain
// to nexus
message AddCosmosBasedChainRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_ACCESS_CONTROL;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  nexus.exported.v1beta1.Chain chain = 2 [
    deprecated = true,
    (gogoproto.nullable) = false
  ]; // chain was deprecated in v0.27
  string addr_prefix = 3;
  reserved 4; // min_amount was removed in v0.15
  repeated nexus.exported.v1beta1.Asset native_assets = 5 [
    deprecated = true,
    (gogoproto.nullable) = false
  ]; // native_assets was deprecated in v0.27
  // TODO: Rename this to `chain` after v1beta1 -> v1 version bump
  string cosmos_chain = 6
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
  string ibc_path = 7 [ (gogoproto.customname) = "IBCPath" ];
}

message AddCosmosBasedChainResponse {}

// RegisterAssetRequest represents a message to register an asset to a cosmos
// based chain
message RegisterAssetRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_CHAIN_MANAGEMENT;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string chain = 2
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
  nexus.exported.v1beta1.Asset asset = 3 [ (gogoproto.nullable) = false ];
  bytes limit = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
  google.protobuf.Duration window = 5
      [ (gogoproto.stdduration) = true, (gogoproto.nullable) = false ];
}

message RegisterAssetResponse {}

// RouteIBCTransfersRequest represents a message to route pending transfers to
// cosmos based chains
message RouteIBCTransfersRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
}

message RouteIBCTransfersResponse {}

// RegisterFeeCollectorRequest represents a message to register axelarnet fee
// collector account
message RegisterFeeCollectorRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_ACCESS_CONTROL;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  bytes fee_collector = 2
      [ (gogoproto.casttype) =
            "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
}

message RegisterFeeCollectorResponse {}

message RetryIBCTransferRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string chain = 2 [
    (gogoproto.casttype) =
        "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName",
    deprecated = true
  ];
  uint64 id = 3 [
    (gogoproto.customname) = "ID",
    (gogoproto.casttype) =
        "github.com/axelarnetwork/axelar-core/x/nexus/exported.TransferID"
  ];
}

message RetryIBCTransferResponse {}

message RouteMessageRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string id = 2 [ (gogoproto.customname) = "ID" ];
  bytes payload = 3;
  bytes feegranter = 4 [ (gogoproto.casttype) =
                             "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
}

message RouteMessageResponse {}

message CallContractRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;

  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string chain = 2
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
  string contract_address = 3;
  bytes payload = 4;
  Fee fee = 5;
}

message CallContractResponse {}
